# task-cards

./: .env  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md
backend/app/: pyproject.toml  requirements.txt
backend/app/app/: __init__.py  db.py  main.py
backend/app/app/api/v1/: crud.py
backend/app/app/models/: tasks.py  users.py
backend/app/app/utils/: crud.py
backend/app/hooks/: update-requirements.sh
backend/app/migrations/: env.py
backend/app/migrations/versions/: 294922faaee8_group_revision.py  66927367b62d_init.py  7be117a085d1_add_tasks_tags.py  889f6c7e0da9_add_user.py  b813e1296189_add_groups.py  e327585690ab_add_tasks.py
backend/app/tests/: __init__.py  test_app.py
frontend/: Dockerfile
frontend/app/: package-lock.json  package.json
frontend/app/src/components/: HelloWorld.vue
