[tool.poetry]
name = "fastapicrudtemplate"
version = "0.1.0"
description = ""
authors = ["Nathan Perkins <nathanjp91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
python-dotenv = "^0.21.0"
uvicorn = "^0.19.0"
requests = "^2.28.1"
sqlmodel = "^0.0.8"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-crudrouter = "^0.8.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-check = "^1.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
